<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">TourMate</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="appid">a0e0d52b2dbb8228d3f19466bb398fd0</string>
    <string name="appid1">a0e0d52b2dbb8228d3f19466bb398fd0</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_maps2">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="title" tools:ignore="DuplicateDefinition">Title</string>
    <string name="description" tools:ignore="DuplicateDefinition">Description</string>
    <string name="tourmate">TourMate</string>
    <string name="email">Email</string>
    <string name="signin">Signin</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="password" tools:ignore="DuplicateDefinition">password</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_password" tools:ignore="DuplicateDefinition">Forgot password?</string>
    <string name="atm">Atm</string>
    <string name="bank">Bank</string>
    <string name="govt_office">Govt_office</string>
    <string name="hospital">Hospital</string>
    <string name="email_address">Email Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="sign_up" tools:ignore="DuplicateDefinition">Sign Up</string>
    <string name="travel_with">Travel with</string>
    <string name="status" tools:ignore="DuplicateDefinition">Status</string>
    <string name="wind_2_6km_h">Wind:2.6km/h</string>
    <string name="humidity_88">Humidity: 88%</string>
    <string name="_30_c">30*C</string>
    <string name="memory_details">Memory Details</string>
    <string name="caption">Caption:</string>
    <string name="date">Date:</string>
    <string name="lunch" tools:ignore="DuplicateDefinition">Lunch</string>
    <string name="close">Close</string>
    <string name="are_you_sure_to_sign_out">Are you sure to Sign Out??</string>
    <string name="cancel" tools:ignore="DuplicateDefinition">Cancel</string>
    <string name="sign_out">Sign Out</string>
    <string name="events_details">Events Details</string>
    <string name="trip_title">Trip Title</string>
    <string name="start_journey_from">Start Journey From:</string>
    <string name="dhaka" tools:ignore="DuplicateDefinition">Dhaka</string>
    <string name="budget">Budget:</string>
    <string name="_5000_bdt">5000 BDT</string>
    <string name="start_date">Start Date:</string>
    <string name="end_date">End Date:</string>
    <string name="enter_your_email_for_reset_password">Enter your email for reset password</string>
    <string name="send">Send</string>
    <string name="trip_name" tools:ignore="DuplicateDefinition">Trip Name</string>
    <string name="from_date">From Date</string>
    <string name="wallet" tools:ignore="DuplicateDefinition">Wallet</string>
    <string name="details">Details</string>
    <string name="day_left">Day left</string>
    <string name="memories">Memories</string>
    <string name="expense_type" tools:ignore="DuplicateDefinition">Expense Type</string>
    <string name="expense_amount">Expense Amount</string>
    <string name="add_expense" tools:ignore="DuplicateDefinition">Add Expense</string>
    <string name="add_memory">Add Memory</string>
    <string name="upload">Upload</string>
    <string name="add_event">Add Event</string>
    <string name="trip_description">Trip Description</string>
    <string name="starting_place">Starting Place</string>
    <string name="estimated_budjet">Estimated Budjet</string>
    <string name="pick_tour_start_date">Pick Tour Start Date</string>
    <string name="pick_tour_end_date">Pick Tour End Date</string>
    <string name="add_trip">Add Trip</string>
    <string name="are_you_sure_to_delete_this_data">Are you sure to delete this data??</string>
    <string name="delete">Delete</string>
    <string name="chose_your_option">Chose your option</string>
    <string name="please_select_a_time">Please select a time</string>
    <string name="ok">OK</string>
    <string name="no_weather_data">No weather data</string>
    <string name="near_me">Near Me</string>
    <string name="weathers">Weathers</string>
    <string name="ticket_booking">Ticket Booking</string>
    <string name="all_tours">All Tours</string>
    <string name="_5" tools:ignore="DuplicateDefinition">5%</string>
    <string name="_1000_bdt" tools:ignore="DuplicateDefinition">1000 BDT</string>
    <string name="the_name_of_the_division">The Name of The Division:</string>
    <string name="khulna">Khulna</string>
    <string name="chose_from_date" tools:ignore="DuplicateDefinition">Chose from Date</string>
    <string name="time">Time</string>
    <string name="bangla_tk_icon">ট</string>
    <string name="fifty">50</string>
    <string name="discription">Discription</string>
    <string name="temp">temp</string>
    <string name="_50">50</string>
    <string name="content_description">content description</string>
    <string name="add_your_name">add your name</string>


    <string-array name="places__name">
        <item>Ahsan Manzil</item>
        <item>Curzon Hall</item>
        <item>Chottogram</item>
    </string-array>

    <string-array name="division_description">
        <item>Ahsan Manzil was the official residential palace and seat of the Nawab of Dhaka.The building is situated at Kumartoli along the banks of the Buriganga River in Dhaka, Bangladesh.</item>
        <item>The Curzon Hall is a British Raj-era building and home of the Faculty of Sciences at the University of Dhaka.The building was originally intended to be a town hall and is named after Mr Curzon, the Viceroy of India who laid its foundation stone in 1904.</item>
        <item>Chottogram is a division of Bangladesh</item>
    </string-array>

</resources>
