<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    android:layout_height="wrap_content">

    <TextView
        android:textColor="@color/mainColor"
        android:gravity="center"
        android:text="@string/events_details"
        android:textSize="22sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:textSize="20sp"
        android:text="@string/trip_title"
        android:textColor="@color/mainColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/alartTripTitleTvId"
        android:hint="@string/title"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" />
    <TextView
        android:textSize="20sp"
        android:text="@string/description"
        android:textColor="@color/mainColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/alartTripDescriptionTvId"
        android:hint="@string/description"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" />

    <TextView
        android:textSize="20sp"
        android:text="@string/start_journey_from"
        android:textColor="@color/mainColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/alartTripStartPlaceTvId"
        android:hint="@string/dhaka"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" />
    <TextView
        android:textSize="20sp"
        android:text="@string/budget"
        android:textColor="@color/mainColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/alartTripBudgetTvId"
        android:hint="@string/_5000_bdt"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" />
    <TextView
        android:textSize="20sp"
        android:text="@string/start_date"
        android:textColor="@color/mainColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/alartTripSDateTvId"
        android:hint="@string/lunch"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" />

    <TextView
        android:textSize="20sp"
        android:text="@string/end_date"
        android:textColor="@color/mainColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/alartTripEDateTvId"
        android:hint="@string/date"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/alartCloseTvID"
        android:padding="8dp"
        android:textColor="@color/darkRed"
        android:layout_gravity="right"
        android:text="@string/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="RtlHardcoded" />

</LinearLayout>