<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="15dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/addEventTvId"
        android:gravity="center"
        android:textSize="35sp"
        android:text="@string/add_event"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:theme="@style/AppTheme.NoActionBar"
        android:layout_height="wrap_content">

        <EditText
            android:hint="@string/trip_name"
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:id="@+id/tripNameId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:theme="@style/AppTheme.NoActionBar"
        android:layout_height="wrap_content">

        <EditText
            android:hint="@string/trip_description"
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:id="@+id/tripDescriptionId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:theme="@style/AppTheme.NoActionBar"
        android:layout_height="wrap_content">

        <EditText
            android:hint="@string/starting_place"
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:id="@+id/tripStartingPlaceEtId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="no"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:theme="@style/AppTheme.NoActionBar"
        android:layout_height="wrap_content">

        <EditText
            android:hint="@string/estimated_budjet"
            android:singleLine="true"
            android:inputType="number"
            android:imeOptions="actionDone"
            android:id="@+id/tripBudgetEtId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no" />

    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:id="@+id/datepicklayoutid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="40dp">

        <ImageView

            android:id="@+id/dateiconId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:tint="@color/mainColor"
            android:src="@drawable/datecalender"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/opendatepickerTvID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textColor="@color/mainColor"
            android:layout_toEndOf="@+id/dateiconId"
            android:hint="@string/pick_tour_start_date"
            android:paddingTop="12dp"
            android:textSize="16sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/todatepicklayoutid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="40dp">

        <ImageView

            android:id="@+id/todateiconId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:tint="@color/mainColor"
            android:src="@drawable/datecalender"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/toopendatepickerTvID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@+id/todateiconId"
            android:hint="@string/pick_tour_end_date"
            android:paddingTop="12dp"
            android:textColor="@color/mainColor"
            android:textSize="16sp" />

    </RelativeLayout>
    <Button
        android:id="@+id/addTrip"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:text="@string/add_trip"
        android:layout_marginTop="10dp"
        android:textAllCaps="false"
        android:background="@drawable/gradient_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>