<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_height="wrap_content">

    <TextView
        android:layout_marginTop="5dp"
        android:textColor="	#000000"
        android:layout_gravity="center"
        android:textSize="16sp"
        android:text="@string/are_you_sure_to_sign_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_gravity="right"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="RtlHardcoded">


        <TextView
            android:id="@+id/cancelTvID"
            android:textColor="@android:color/black"
            android:padding="16dp"
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/signOutTvId"
            android:textColor="#8e0000"
            android:padding="10dp"
            android:textSize="16sp"
            android:text="@string/sign_out"
            android:layout_marginRight="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>


</LinearLayout>