<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="8dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_marginTop="5dp"
        android:textColor="	#000000"
        android:layout_gravity="center"
        android:textSize="16sp"
        android:text="@string/chose_your_option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_gravity="right"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="RtlHardcoded">


        <TextView
            android:id="@+id/addMemoryDialogId"
            android:textColor="@color/mainColor"
            android:padding="16dp"
            android:text="@string/add_memory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/walletDialogId"
            android:textColor="@color/mainColor"
            android:padding="10dp"
            android:textSize="16sp"
            android:text="@string/wallet"
            android:layout_marginRight="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>