<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#99ccff"
    tools:context="com.nub.tourmate.MyActivity.DetailActivity">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="155dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@mipmap/ic_launcher"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/detailDesTextVw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView2"
        android:layout_alignStart="@+id/imageView2"
        android:layout_marginStart="85dp"
        android:layout_marginTop="13dp"
        android:text="@string/title"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/detailTittleTextVw"
        android:layout_below="@+id/detailDesTextVw"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/description"
        android:textSize="20sp"
        android:textStyle="normal" />
</RelativeLayout>
</RelativeLayout>
