<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="4"
    tools:context="com.nub.tourmate.WeatherActivity">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="10dp">

            <ImageView
                android:id="@+id/backWId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:padding="15dp"
                android:src="@drawable/back"
                android:tint="@color/mainColor"
                android:contentDescription="@string/todo" />


            <ImageView
                android:id="@+id/weatherCurrentIconIvId"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:layout_marginTop="8dp"
                android:src="@mipmap/ic_launcher"
                android:contentDescription="@string/todo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/cityStatusCurrentTvId"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/status"
                        android:textColor="@color/mainColor"
                        android:textSize="30sp" />

                    <TextView
                        android:id="@+id/cityNameCurrentTvId"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/status"
                        android:textColor="@color/mainColor"
                        android:textSize="20sp" />

                    <!--<TextView-->

                    <!--android:id="@+id/tempCurrentWeitherTvId"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="Temperture 00.0 *C"-->
                    <!--android:textColor="@color/white"-->
                    <!--android:textSize="15sp" />-->

                    <TextView
                        android:id="@+id/windCurrentWeitherTvId"
                        android:layout_width="wrap_content"

                        android:layout_height="wrap_content"

                        android:text="@string/wind_2_6km_h"
                        android:textColor="@color/mainColor"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/humidityCurrentWeitherTvId"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/humidity_88"
                        android:textColor="@color/mainColor"
                        android:textSize="15sp" />


                </LinearLayout>

                <TextView

                    android:id="@+id/tempCurrentWeitherTvId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/_30_c"
                    android:textColor="@color/darkRed"
                    android:textSize="20sp" />


            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4">

        <view class="androidx.appcompat.app.AlertController$RecycleListView"
            android:id="@+id/weatherRecyclerViewId"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


        </view>
    </LinearLayout>


</LinearLayout>