<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/addExpenseTvId"
        android:gravity="center"
        android:textSize="25sp"
        android:text="@string/add_expense"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:theme="@style/AppTheme.NoActionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/expenseTypeIdListEtId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/expense_type"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="text"
            android:singleLine="true"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:theme="@style/AppTheme.NoActionBar"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/expenseAmountnListEtId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/expense_amount"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="number"
            android:singleLine="true"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button

        android:id="@+id/addExensebtnId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/gradient_background"
        android:padding="15dp"
        android:text="@string/add_expense"
        android:textAllCaps="false"
        android:textColor="@color/white"
        tools:ignore="DuplicateSpeakableTextCheck" />
</LinearLayout>